# green-got-exercice

./: .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.test  README.md  docker-compose-kafka.yaml  docker-compose.yaml  node-setup.md
.github/workflows/: ci_cd.yaml
src/: api.rs  input_transaction.rs  kafka_consumer.rs  kafka_producer.rs  main.rs
src/infra/queue/consumer/: kafka_consumer.rs  mock_consumer.rs  mod.rs  queue_consumer.rs
src/infra/queue/producer/: kafka_producer.rs  mock_producer.rs  mod.rs  queue_producer.rs
src/infra/webhook/: mod.rs  webhook.rs  webhook_mock.rs  webhook_post.rs
src/models/: config.rs  input_transaction.rs  mod.rs  output_transaction.rs
src/services/: amount_service.rs  input_transaction_service.rs  logo_service.rs  mod.rs  output_transaction_service.rs  transaction_handler.rs
