[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0"
rdkafka = {version = "0.33.2", features = ["cmake-build"]}
async-trait = "0.1.71"
hyper = { version = "0.14", features = ["full"] }
dotenv = "0.15.0"
utoipa = { version = "3.4.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version="3.1.4", features = ["axum"] }
futures = "0.3.28"